syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dk.dsrhorsens.volunteers.proto.event";

package dsr.event;

service EventService {
  rpc createEvent (EventInfo) returns (EventId) {}
  rpc retrieveEvent (EventId) returns (IndexedEvent) {}
  rpc updateEvent (IndexedEvent) returns (google.protobuf.Empty) {}
  rpc deleteEvent (EventId) returns (google.protobuf.Empty) {}
  rpc listEvents (google.protobuf.Empty) returns (EventList) {}
}

message EventInfo {
  string event_name = 1;
  string event_date = 2;
  string start_time= 3;
  string end_time = 4;
  string location = 5;
  ManagerId main_manager = 6;
}

message ManagerId {
  int64 manager_id = 1;
}

message IndexedEvent {
  EventId eventId = 1;
  EventInfo eventInfo = 2;
}

message EventId {
  int64 event_id = 1;
}

message EventList {
  repeated IndexedEvent events = 1;
}